Correctly overflow pictures instead of non uniform scaling

--- a/_sass/_photo_albums.scss
+++ b/_sass/_photo_albums.scss
@@ -5,6 +5,7 @@
 
 .thumbnail > img {
     height: 300px;
+    object-fit: cover;
 }
 
 .thumbnail > h3 {
